# coc-farming-bot

./: .gitignore  main.py  pyproject.toml
device-env/: oneplus-pad-3.env
src/: agent.py  config.py  img_parser.py  notify.py  types.py
