[project]
name = "coc-farming-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "uiautomator2>=3.5.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
